--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,15 +9,17 @@
   <meta name="twitter:site" content="@dugjason">
   <meta name="twitter:creator" content="@dugjason">
   {% if post.title %}
-    <meta name="twitter:title" content="{{ post.title }}">
+  <meta name="twitter:title" content="{{ post.title }}">
   {% else %}
-    <meta name="twitter:title" content="{{ site.title }}">
+  <meta name="twitter:title" content="{{ site.title }}">
   {% endif %}
   {% if post.url %}
-    <meta name="twitter:url" content="{{ site.url }}{{ post.url }}">
+  <meta name="twitter:url" content="{{ site.url }}{{ post.url }}">
   {% endif %}
   {% if post.description %}
-    <meta name="twitter:description" content="{{ post.description }}">
+  <meta name="twitter:description" content="{{ post.description }}">
+  {% else %}
+  <meta name="twitter:description" content="{{ post.title }}">
   {% endif %}
 
   <title>
