Added <meta name="author" content="Jason Dugdale">

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,7 @@
   {% else %}
   <meta name="twitter:description" content="{{ page.title }}">
   {% endif %}
+  <meta name="author" content="Jason Dugdale">
 
   <title>
     {% if page.title == "Home" %}
